# help2man

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  flake.nix  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
docs/: conf.py  index.md  requirements.txt
docs/api/: external.md  help2man.md  ui.md
docs/resources/: install.md  man.md
requirements/: dev.txt
scripts/: generate-api.md.sh
src/help2man/: __init__.py  __main__.py
src/help2man/assets/jinja2/: template.man.j2
src/help2man/assets/markdown/: template.md
src/help2man/assets/txt/: description.txt  epilog.txt  version.txt
src/help2man/ui/: __init__.py  cli.py
templates/: epilog.txt  version.txt
tests/: __init___test.py  cmd_test.py
tests/txt/: options.txt  test.man  usage.txt
