[build-system]
requires = ["setuptools_scm[toml] >= 6.2", "shtab", "jinja2", "tomli"]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "help2man"
description = "Convert --help and --version to man page."
readme = "README.md"
requires-python = ">= 3.9"
keywords = ["help2man", "man"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[[project.authors]]
name = "Wu Zhenyu"
email = "wuzhenyu@ustc.edu"

[project.license]
text = "GPL v3"

[project.urls]
Homepage = "https://help2man.readthedocs.io"
Download = "https://github.com/Freed-Wu/help2man/releases"
"Bug Report" = "https://github.com/Freed-Wu/help2man/issues"
Source = "https://github.com/Freed-Wu/help2man"

[project.scripts]
help2man = "help2man.__main__:main"

[tool.setuptools.package-data]
help2man = ["py.typed", "assets/**"]

[tool.setuptools.data-files]
"share/man/man1" = ["sdist/help2man.1"]
"share/bash-completion/completions" = ["sdist/help2man"]
"share/zsh/site-functions" = ["sdist/_help2man"]

[tool.setuptools_scm]
write_to = "src/help2man/_version.py"

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

# begin: scripts/update-pyproject.toml.pl
[tool.setuptools.dynamic.optional-dependencies.dev]
file = "requirements/dev.txt"
# end: scripts/update-pyproject.toml.pl

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile = "black"

# https://github.com/PyCQA/pydocstyle/issues/418
[tool.pydocstyle]
add_ignore = "D205, D400"

[tool.doq]
template_path = "templates"

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "if __name__ == .__main__.:"]

[tool.bandit]
skips = ["B404", "B603"]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
